<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="100dp"
    android:layout_width="100dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.douncoding.enterprise.view.component.CutRelativeLayout
            android:id="@+id/profile_header_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorPrimaryWhite"
                    android:text="@string/profile_content_default_username"/>

                <TextView
                    android:id="@+id/job_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimaryWhite"
                    android:text="@string/profile_content_default_job"/>

                <TextView
                    android:id="@+id/company_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/textColorPrimaryWhite"
                    android:text="@string/profile_content_default_company"/>
            </LinearLayout>
        </com.douncoding.enterprise.view.component.CutRelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/face_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_profile_sample_face_2"/>

        <!-- 구독하기 버튼 -->
        <Button
            android:id="@+id/subscriber_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_primary_10stroke_rounded"
            android:textColor="@color/colorPrimary"
            android:text="@string/profile_content_action_subscribe"/>

        <!-- 카운팅 레이아웃 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_above="@id/subscriber_action">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/subscriber_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/profile_content_default_subscriber_label"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="50sp"
                android:background="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/project_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/profile_content_default_project_label"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="50sp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/profile_content_default_comment_label"/>
            </LinearLayout>
        </LinearLayout>

        <!-- 상태 레이아웃 -->
        <LinearLayout
            android:id="@+id/status_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/bg_status_fill_rounded">
            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:text="@string/profile_content_default_status"/>
        </LinearLayout>

        <!-- 주요 스킬목록 태그 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/face_image"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <LinearLayout
                android:id="@+id/skills_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <include layout="@layout/item_skills_tag"/>
                <include layout="@layout/item_skills_tag"/>
                <include layout="@layout/item_skills_tag"/>
            </LinearLayout>

            <include layout="@layout/item_skills_more"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>